<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.schedule.ScheduleFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:text="@string/set_schedule"
        android:textAlignment="center"
        android:textColor="@color/purple_btn"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayout_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="321dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:hint="@string/title_schedule"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewSchedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/title_schedule"
            android:inputType="none"
            app:simpleItems="@array/title_array" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayout_desc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="321dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:hint="@string/description"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/etLayout_title"
        app:layout_constraintStart_toStartOf="@+id/etLayout_title"
        app:layout_constraintTop_toBottomOf="@+id/etLayout_title">

        <com.skinconnect.doctorapps.customview.EditText
            android:id="@+id/cv_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayout_timeStart"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/time"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/set_schedule"
        app:layout_constraintTop_toBottomOf="@+id/etLayout_desc">

        <TextView
            android:id="@+id/cv_timeStart"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:hint="@string/time" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayout_timeEnd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/time"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintStart_toEndOf="@id/set_schedule"
        app:layout_constraintTop_toBottomOf="@+id/etLayout_timeStart">

        <TextView
            android:id="@+id/cv_timeEnd"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            android:hint="@string/time" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/set_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:text="@string/start"
        android:textColor="@color/purple_btn"
        app:layout_constraintTop_toBottomOf="@id/etLayout_desc"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="32dp"
        app:layout_constraintVertical_bias="0.523" />

    <TextView
        android:id="@+id/set_schedule2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:text="@string/end"
        android:textColor="@color/purple_btn"
        app:layout_constraintTop_toBottomOf="@id/set_schedule"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="32dp"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="266dp"
        android:layout_height="51dp"
        android:background="@drawable/button_rounded"
        android:text="@string/send_schedule"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/etLayout_desc"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/etLayout_desc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="528dp" />

</androidx.constraintlayout.widget.ConstraintLayout>