<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="8dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="295dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:padding="8dp">

        <TextView
            android:id="@+id/do_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColorHint="@color/purple_btn"
            android:hint="@string/schedule"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/purple_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableLeftCompat="@drawable/ic_clock" />

        <TextView
            android:id="@+id/action_schedule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="26sp"
            android:textStyle="bold"
            android:hint="@string/medicine"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/do_schedule"/>

        <TextView
            android:id="@+id/action_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/action"

            app:layout_constraintTop_toBottomOf="@id/action_schedule"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>