<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/buttonBackSecondRegisterPage"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/rect_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425"
        android:contentDescription="@string/content_desc" />

    <ImageView
        android:id="@+id/rect_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/content_desc"
        android:src="@drawable/ic_baseline_rectangle_green"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rect_green2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/content_desc"
        android:src="@drawable/ic_baseline_rectangle_green"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/rect_green"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="123dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="234dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/etLayout_username"
        app:layout_constraintStart_toStartOf="@id/etLayout_username" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayout_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="321dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:hint="@string/hint_username"
        android:textAlignment="center"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:startIconDrawable="@drawable/ic_profile_normal">

        <com.skinconnect.doctorapps.customview.EditText
            android:id="@+id/cv_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/etLayout_email"
        app:layout_constraintStart_toStartOf="@id/etLayout_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayout_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="321dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_email"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/etLayout_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etLayout_username"
        app:layout_constraintTop_toBottomOf="@id/etLayout_username"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.skinconnect.doctorapps.customview.EmailEditText
            android:id="@+id/cv_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/etLayout_password"
        app:layout_constraintStart_toStartOf="@id/etLayout_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="321dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/etLayout_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etLayout_email"
        app:layout_constraintTop_toBottomOf="@id/etLayout_email"
        app:startIconDrawable="@drawable/ic_baseline_password">

        <com.skinconnect.doctorapps.customview.PasswordEditText
            android:id="@+id/cv_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="266dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_rounded"
        android:text="@string/create"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etLayout_password"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/etLayout_password"
        app:layout_constraintTop_toBottomOf="@id/etLayout_password"
        app:layout_constraintVertical_bias="0.176" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/btn_create"
        app:layout_constraintStart_toStartOf="@+id/btn_create"
        app:layout_constraintTop_toBottomOf="@+id/btn_create"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>